<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorFragment">


    <TextView
        android:id="@+id/nameHeading"
        android:layout_width="162dp"
        android:layout_height="31dp"

        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="Character Name: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/name"
        android:layout_width="185dp"
        android:layout_height="46dp"

        android:hint="@string/enter_character_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nameHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="Autofill,MissingConstraints"
        tools:text="Character name in here" />

    <TextView
        android:id="@+id/nicknameHeading"
        android:layout_width="100dp"
        android:layout_height="30dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="Nickname: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHeading"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:hint="@string/enter_nickname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/nicknameHeading"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="Autofill,MissingConstraints"
        tools:text="Nickname here" />

    <TextView
        android:id="@+id/birthdayHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Birthday: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameHeading"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/statusHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="Status: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameHeading"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/status"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:hint="@string/enter_character_status"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="Autofill"
        tools:text="Status here" />

    <TextView
        android:id="@+id/portrayed"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:hint="@string/enter_actor"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="Autofill"
        tools:text="Actor here" />

    <TextView
        android:id="@+id/portrayedHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Portrayed By: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:hint="@string/enter_character_birthday"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="Autofill"
        tools:text="Birthday in here" />

    <EditText
        android:id="@+id/myNotes"
        android:layout_width="372dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:hint="Enter your comments on the character here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portrayed"
        app:layout_constraintVertical_bias="0.169" />


</androidx.constraintlayout.widget.ConstraintLayout>